--- a/src/Admin Panel/Admin-Panel-Pages/Admin-Auth/login.css
+++ b/src/Admin Panel/Admin-Panel-Pages/Admin-Auth/login.css
@@ -33,7 +33,10 @@ color: #000000;
     height: 44px;
     margin-top: 3px;
   } */
-
+.inputNadim{
+  border: 1px solid black;
+  border-radius: 10px !important;
+}
   .mtop1{
     margin-top: -2px;
   }
