--- a/src/Admin Panel/Admin-Panel-Pages/Admin-Auth/login.css
+++ b/src/Admin Panel/Admin-Panel-Pages/Admin-Auth/login.css
@@ -40,17 +40,17 @@ color: #000000;
   .recap{
     width: 20px;
   }
-  .img-responsive{
+  /* .img-responsive{
     height: 39px;
     margin-left: 44%;
     margin-right: 50%;
 
-  }
-  .login-heading {
+  } */
+  .heading1M {
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 560;
-    font-size: 33px;
+    font-weight: 500;
+    font-size: 31px;
     line-height: 41px;
     text-align: center;
     color: #000000;
@@ -65,3 +65,46 @@ color: #000000;
     padding-left: 20px;
  
   }
+  .logodivM{
+    margin-bottom: 24px;
+  }
+  .logoM{
+height: 46px;
+    margin-left: 44%;
+    margin-right: 50%;
+    margin-top: 4px;
+}
+.heading1M{
+
+}
+.label1M{
+  font-family: 'Roboto';
+font-style: normal;
+font-size: 16px;
+line-height: 19px;
+align-items: left;
+vertical-align: top;
+fill: Solid
+#000000
+}
+/* .auth form .form-group label{
+  font-family: 'Roboto';
+font-style: normal;
+font-size: 16px;
+line-height: 19px;
+align-items: left;
+vertical-align: top;
+} */
+.loginbtnM{
+  background-color:#2563EB;
+  border: 2px solid #2563EB ;
+border-radius: 10px;
+color:white
+}
+
+.signuupbtnM{
+  background-color:#2563EB;
+  border: 2px solid #2563EB ;
+border-radius: 10px;
+color:white
+}
