--- a/src/Admin Panel/Admin-Panel-Pages/Admin-Auth/login.css
+++ b/src/Admin Panel/Admin-Panel-Pages/Admin-Auth/login.css
@@ -1,70 +1,60 @@
-#wrapper{
-    background:#F1F5F9;;
+.loginLogo {
+  width: 180px;
 }
-/* body{
-    color: #000000;
-    background-color:  #F1F5F9;
 
-} */
-.form-group{
-    margin-bottom: 24px;
-    margin-top: 18px;
+.loginTittle {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 41px;
+  text-align: center;
+  margin-bottom: 20px;
+  color: #000000;
 }
-.login-heading{
-    font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 41px;
-/* identical to box height */
 
-text-align: center;
-
-color: #000000;
+.loginFormLabel p {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 17px;
+  color: #000000;
 }
-/* #logo {
-    float: left;
-    padding: 10px 15px;
-    height: 63px;
-    text-align: center;
-  } */
-  /* .logoimg {
-    width: auto;
-    height: 44px;
-    margin-top: 3px;
-  } */
-.inputNadim{
-  border: 1px solid black;
-  border-radius: 10px !important;
+
+.loginForm {
+  background: #FFFFFF;
+  box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.08);
+  border-radius: 5px;
 }
-  .mtop1{
-    margin-top: -2px;
-  }
-  .recap{
-    width: 20px;
-  }
-  .img-responsive{
-    height: 39px;
-    margin-left: 44%;
-    margin-right: 50%;
 
-  }
-  .login-heading {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 560;
-    font-size: 33px;
-    line-height: 41px;
-    text-align: center;
-    color: #000000;
-  }
-  @media (min-width:768px) {
-    .login-heading {
-      text-align: center;
-    }
+.loginbtn {
+  background: #2563EB;
+  box-shadow: 0px 4px 19px rgba(119, 147, 65, 0.3);
+  border-radius: 10px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+  color: #FFFFFF;
+}
 
-  }
-  .form-check{
-    padding-left: 20px;
- 
-  }
+.loginRemember {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #475569;
+}
+
+.loginTxt1 {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  color: #2563EB;
+}
