Add customer page

--- a/src/Admin Panel/Admin-Panel-Pages/Admin-Reset-Password/resetPassword.css
+++ b/src/Admin Panel/Admin-Panel-Pages/Admin-Reset-Password/resetPassword.css
@@ -100,7 +100,7 @@
     font-family: "none";
   }
   .ptext-primary{
-  font-family: "none";
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 560;
     font-size: 33px;
