--- a/src/Admin Panel/Admin-Panel-Pages/Forgot Password/forgotPassword.css
+++ b/src/Admin Panel/Admin-Panel-Pages/Forgot Password/forgotPassword.css
@@ -4,6 +4,7 @@
 body{
   color: #000000;
   background-color:  #F1F5F9;
+  font-family: 'Roboto';
 
 }
 .form-group{
@@ -98,7 +99,7 @@ label:not(.control-label) {
   font-family: "none";
 }
 .ptext-primary{
-font-family: "none";
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 560;
   font-size: 33px;
@@ -106,6 +107,10 @@ font-family: "none";
   text-align: center;
   color: #000000;
   margin-top: -30px
+}
+label{
+  font-family: 'Roboto' !important;
+  
 }
 .btn.btn-lg{
 
