Navbar , Add customer

--- a/src/Admin Panel/Admin-Panel-Pages/Admin-Reset-Password/resetPassword.css
+++ b/src/Admin Panel/Admin-Panel-Pages/Admin-Reset-Password/resetPassword.css
@@ -4,6 +4,7 @@
   body{
     color: #000000;
     background-color:  #F1F5F9;
+    font-family: "Roboto" !important;
   
   }
   .form-group{
@@ -22,6 +23,7 @@
     border-radius: 10px !important;
     border: 1px solid #bfcbd9;
     -webkit-box-shadow: none;
+    font-family: "Roboto" !important;
     box-shadow: none;
     color: #494949;
     font-size: 14px;
@@ -43,7 +45,7 @@
     
   
   .login-heading{
-    font-family: 'none';
+    font-family: "Roboto" !important;
   font-style: normal;
   font-weight: 500;
   font-size: 50px;
@@ -97,7 +99,7 @@
   label:not(.control-label) {
     font-weight: 900;
     font-style: normal;
-    font-family: "none";
+    font-family: "Roboto" !important;
   }
   .ptext-primary{
     font-family: 'Roboto';
