--- a/src/Admin Panel/Admin-Panel-Pages/List of invoices/ListOfInvoices.css
+++ b/src/Admin Panel/Admin-Panel-Pages/List of invoices/ListOfInvoices.css
@@ -87,6 +87,9 @@
      background-position: left center;
    
  }
+ .invoiceDisplay{
+    display: none;
+ }
  .eUeqdG {
       
          white-space: inherit;
