--- a/src/assets/styles/components/_dropdowns.scss
+++ b/src/assets/styles/components/_dropdowns.scss
@@ -25,6 +25,7 @@
   }
   .dropdown-menu {
     margin-top: .75rem;
+    width: 400px !important;
     font-size: $default-font-size;
     box-shadow: 0px 1px 15px 1px rgba(230, 234, 236, 0.35);    
     .dropdown-item {
@@ -33,6 +34,9 @@
       cursor: pointer;
       &:active {
         background: initial;
+      }
+      p {
+        width: 100% !important;
       }
     }
   }
