--- a/src/assets/styles/components/_dropdowns.scss
+++ b/src/assets/styles/components/_dropdowns.scss
@@ -25,7 +25,7 @@
   }
   .dropdown-menu {
     margin-top: .75rem;
-    width: 400px !important;
+    // width: 400px !important;
     font-size: $default-font-size;
     box-shadow: 0px 1px 15px 1px rgba(230, 234, 236, 0.35);    
     .dropdown-item {
