Customer Panel done

--- a/src/Admin Panel/Admin-Panel-Pages/Customer List/List.css
+++ b/src/Admin Panel/Admin-Panel-Pages/Customer List/List.css
@@ -57,8 +57,8 @@ height: 29px
 }
 
 .kBhHpT {
-    position: absolute;
-    left: 65px;
+    /* position: absolute;
+    left: 65px; */
     font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
